--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Python
+# Python cache
 __pycache__/
 *.pyc
 *.pyo
@@ -8,90 +8,14 @@ __pycache__/
 # Jupyter
 .ipynb_checkpoints/
 
-# Environments
+# Virtual environments
 .venv/
 env/
 venv/
 
-# OS
+# OS files
 .DS_Store
+Thumbs.db
 
-# Data
-data/raw/*
-!data/raw/.gitkeep
-
-# Outputs
-outputs/figures/*
-!outputs/figures/.gitkeep
-a# Python
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-*.pkl
-
-# Jupyter
-.ipynb_checkpoints/
-
-# Environments
-.venv/
-env/
-venv/
-
-# OS
-.DS_Store
-
-# Data
-data/raw/*
-!data/raw/.gitkeep
-
-# Outputs
-outputs/figures/*
-!outputs/figures/.gitkeep
-# Python
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-*.pkl
-
-# Jupyter
-.ipynb_checkpoints/
-
-# Environments
-.venv/
-env/
-venv/
-
-# OS
-.DS_Store
-
-# Data
-data/raw/*
-# Python
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-*.pkl
-
-# Jupyter
-.ipynb_checkpoints/
-
-# Environments
-.venv/
-env/
-venv/
-
-# OS
-.DS_Store
-
-# Data
-data/raw/*
-!data/raw/.gitkeep
-
-# Outputs
-outputs/figures/*
-!outputs/figures/.gitkeep
-!data/raw/.gitkeep
-
+# Logs
+*.log
